--- a/main.css
+++ b/main.css
@@ -31,18 +31,18 @@ header input {
   padding: 10px 15px;
   border: none;
   outline: none;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(145, 55, 3, 0.781);
   border-radius: 16px 0px 16px 0px;
-  border-bottom: 3px solid #DF8E00;
+  border-bottom: 3px solid #1a1205;
   
-  color: #313131;
+  color: #363636;
   font-size: 20px;
   font-weight: 300;
   transition: 0.2s ease-out;
 }
 
 header input:focus {
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(238, 238, 238, 0.795);
 }
 
 main {
@@ -71,7 +71,7 @@ main {
   font-size: 102px;
   font-weight: 900;
   margin: 30px 0px;
-  text-shadow: 2px 10px rgba(0, 0, 0, 0.6);
+  text-shadow: 4px 6px rgba(0, 0, 0, 0.6);
 }
 
 .current .temp span {
@@ -91,5 +91,13 @@ main {
   color: #FFF;
   font-size: 24px;
   font-weight: 500;
+  text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+}
+
+ .hi-low-text {
+  padding-top: 5px;
+  color: rgba(255, 255, 255, 0.753);
+  font-size: 15px;
+  font-weight: 200;
   text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
 }
