--- a/main.css
+++ b/main.css
@@ -20,24 +20,28 @@ body {
 
 .favourites {
   display: flex;
+  justify-content: center;
   flex-direction: row;
-  border: none;
   padding-top: 70px;
 }
+
 .favouriteCities {
   color: #FFF;
+  padding-top: 5px;
 }
 
-.favouriteStar {
-  padding-left: 15px;
-  border: none;
-}
+.favouriteStar #star-five {
+  padding-right: 40px;
 
-#star-five {
-  display: flex;
+
   background: transparent;
   border: none;
-  
+  width: 20px;
+}
+
+#star-five img {
+  background: transparent;
+  width: 25px;
 }
 
 header {
@@ -53,9 +57,9 @@ header input {
   padding: 10px 15px;
   border: none;
   outline: none;
-  background-color: rgb(196, 196, 196);
+  background-color: rgb(179, 179, 179);
   border-radius: 8px 8px 8px 8px;
-  border-bottom: 3px solid #1a1205;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.473), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
   
   color: #1b1b1b;
   font-size: 20px;
