--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'montserrat', sans-serif;
-  background-image: url('bg2.jpg');
+  background-image: url('Pics/bg2.jpg');
   background-size: cover;
   background-position: top center;
 }
@@ -28,14 +28,13 @@ body {
 .favouriteCities {
   color: #FFF;
   padding-top: 5px;
+  padding-left: 25px;
 }
 
 .favouriteStar #star-five {
-  padding-right: 40px;
-
   background: transparent;
   border: none;
-  width: 20px;
+  width: 18px;
 }
 
 #star-five img {
@@ -119,13 +118,15 @@ main {
   color: #FFF;
   font-size: 24px;
   font-weight: 500;
-  text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+  text-shadow: 0px 2px rgba(0, 0, 0, 0.4);
 }
 
- .hi-low-text {
-  padding-top: 5px;
-  color: rgba(255, 255, 255, 0.61);
-  font-size: 15px;
-  font-weight: 200;
-  text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+.hi-low {
+  flex-direction: row;
+}
+
+#up-down-narrows {
+  position: relative;
+  background: transparent;
+  width: 20px;
 }
